<resources>
    <string name="app_name">HFOSapp</string>
    <string name="input_password">Input Password</string>
    <string name="input_email_anda">input email anda</string>
    <string name="masuk">Masuk</string>
    <string name="welcometext">Selamat Datang User!

        \n\n
<b>Hospital Food Ordering Service (HFOS) adalah aplikasi yang hadir untuk membantu
pekerjaan anda dalam mengorganisir pesanan makanan di RSUD Bandung.
Terdapat dua fitur utama pada HFOS, View dan Insert.</b>
        \n\n

<b>View digunakan untuk melihat hasil pesanan dari setiap ruangan,
    dan Insert adalah fitur yang akan digunakan untuk menginput pesanan dari setiap ruangan.</b>

</string>
    <string name="view">View</string>
    <string name="insert">insert</string>
    <string name="ruangan">Ruangan</string>
    <string name="waktu">Waktu</string>
    <string name="tangal">Tangal</string>
    <string name="nama">   Nama :</string>
    <string name="no_medrec">   No MedRec :</string>
    <string name="diit">   DIIT :</string>
    <string name="viewtitle">VIEW</string>
    <string name="input_medrec">Input MedRec</string>
    <string name="input_nomor_medrec">input nomor medrec</string>
    <string name="logout">Logout</string>

    <array name="Ruangtype">
        <item>Sakura</item>
        <item>SMP</item>
        <item>SMA IPA</item>
        <item>SMA IPS</item>
        <item>SMK</item>
        <item>UN</item>
        <item>USBN</item>
        <item>SNMPTN</item>
        <item>SBMPTN</item>
    </array>
</resources>
